deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: hw1-app
    labels:
        name: hw1-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: hw1-deployment
    namespace: hw1-app
spec:
    replicas: 2
    selector:
        matchLabels:
            app: hw1
    template:
        metadata:
            labels:
                app: hw1
        spec:
            containers:
            - name: otus-hw1
              image: washburn62/otus_trukhin_hw1:v1
              ports:
                  - name: web
                    containerPort: 8000
              livenessProbe:
                  httpGet:
                      port: 8000
                      path: /
                  initialDelaySeconds: 10
                  periodSeconds: 5
                  timeoutSeconds: 2
              readinessProbe:
                  httpGet:
                      port: 8000
                      path: /health/
                  initialDelaySeconds: 10
                  periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
    name: hw1-service
    namespace: hw1-app
spec:
    selector:
        app: hw1
    ports:
        - protocol: TCP
          port: 8000
          targetPort: web
    type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: hw1-ingress
    namespace: hw1-app
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
    rules:
    - host: arch.homework
      http:
          paths:
            - path: /(.*)
              pathType: Prefix
              backend:
                  service:
                      name: hw1-service
                      port:
                          number: 8000
